# qinglang

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  extra_files_installer.cmake  php_config.h.cmake
assets/: header.txt
cmake/modules/: CMakeLists.txt  DetectClangFeature.cpp.in  FindGoogleTest.cmake  PhpBuildHelpFuncs.cmake  PhpDetectCompilerFeatures.cmake  PhpDetectRequirePackages.cmake  PhpInstallSymlink.cmake  PhpUtilFuncs.cmake
docs/: CMakeLists.txt
include/: CMakeLists.txt
include/kernel/base/: compiler_detection.h  global.h  processor_detection.h  system_detection.h
include/php/kernel/base/: compiler_detection.h  global.h  system_detection.h  type_info.h  type_traits.h
include/php/kernel/cli/: terminal.h
include/php/kernel/ds/: array_data.h  byte_array.h
include/php/kernel/thread/: atomic.h  atomic_cxx11.h  basic_atomic.h  generic_atomic.h
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt
src/kernel/base/: compiler_detection.h  files_register.cmake  global.cpp  system_detection.h
src/kernel/cli/: files_register.cmake  terminal.cpp
src/kernel/ds/: files_register.cmake
src/kernel/thread/: atomic.cpp  files_register.cmake
src/language/: CMakeLists.txt
src/sapi/: CMakeLists.txt
src/sapi/cli/: CMakeLists.txt  main.cpp
src/zend/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unittests/: CMakeLists.txt
tests/unittests/kernel/: CMakeLists.txt  atomic_test.cpp  global_test.cpp  type_traits_test.cpp
tools/: CMakeLists.txt
